2008-06-23  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-manager.c: Putting a warning in case of
	problems while loading a .sql file

2008-06-23  Philip Van Hoof  <pvanhoof@gnome.org>

	* tests/scripts/dummy_data_start.sh.in
	* tests/scripts/data/email-contents.sql
	* tests/scripts/data/file-meta.sql
	* tests/scripts/data/common.sql
	* tests/scripts/data/file-contents.sql
	* tests/scripts/data/email-meta.sql
	* tests/scripts/data/xesam.sql:

	Cleaned up the test data now that the databases are (more or less)
	initialized correctly

2008-06-20  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-manager.c:
	* data/sqlite-service-triggers.sql:
	* data/sqlite-tracker-triggers.sql:

	Using a transaction around database initializations. This speeds up 
	initialization, makes it more robust (what if we get killed while 
	initializing) and it seems to avoid a call for fsync() when we have
	PRAGMA synchronous = NORMAL (which we currently do have for all 
	database connections).

	Point of opinion about this commit: we should utilize transactions more
	often in the code. It helps us avoid corruption and massively speeds up
	INSERTs and UPDATEs:

	http://www.sqlite.org/speed.html:

	At Executive Summary: SQLite works best if you group multiple 
	operations together into a single transaction.

	* svn merge -r 1683:1726 ../xesam-support

2008-06-20  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-manager.c: Default to attach_all =
	TRUE for database creation.
	
	* src/trackerd/tracker-main.c: Don't remove the cache directory on
	startup and shutdown, let the database manager handle that.

2008-06-20  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-manager.c: Keep a reference to
	each TrackerDBInterface and set the attach_iface to be the first
	one we create and use that to attach all new interfaces we create.
	Also don't create the XESAM database unless we have an