@@ -148,7 +148,7 @@ initialize_indexer (void)
 	sys_tmp_dir = g_build_filename (g_get_tmp_dir (), filename, NULL);
 	g_free (filename);
 
-	tracker_db_manager_init (FALSE, FALSE, NULL);
+	tracker_db_manager_init (0, NULL);
 
 	g_free (data_dir);
 	g_free (user_data_dir);
